--- a/index.html
+++ b/index.html
@@ -3,17 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Berichtsheft</title>
+    <script src="./js/renderer.js"></script> 
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-
-    <script>
-      // You can also require other files to run in this process
-      require('./renderer.js')
-    </script>
+    <label id="l_eingabe">Eingabe</label>
+    <input id="i_eingabe" type="date"></input>
+    <input id="b_eingabe" type="button" onclick="showDate()" value="OK"></button>
   </body>
 </html>
